# ecommerce-app

./: .gitignore  Ecom pass.txt  README.md
backend/: api flow .txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b5ce8f0454b_create_users_table.py  2d99756865cf_add_is_primary_to_product_images.py  426938f15b26_add_refresh_tokens_table.py  96c01389c881_.py  b1a3c234faff_create_users_table.py  b8f6ab259b47_add_cart_items_table.py  d7a2312f0402_.py  e19099dd9b32_add_sizes_array_to_product_table.py  fc3e1a432d1d_add_orders_and_orders_items_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py  cart.py  product.py  test.py
backend/app/core/: config.py  enums.py  exceptions.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  cart.py  orders.py  product.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  cart.py  product.py
backend/app/services/: auth_service.py  cart flow.txt  cart_service.py  imagekit_service.py  product notes.txt  product_service.py
frontend/: contextapi notes.txt  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/assets/: assets.js
frontend/src/components/: BestSeller.jsx  CartTotal.jsx  Footer.jsx  Hero.jsx  LatestCollection.jsx  Navbar.jsx  NewsLetterBox.jsx  OurPolicy.jsx  ProductItem.jsx  RelatedProducts.jsx  SearchBar.jsx  Title.jsx
frontend/src/context/: ShopContext.jsx
frontend/src/pages/: About.jsx  Cart.jsx  Collection.jsx  Contact.jsx  Home.jsx  Login.jsx  Orders.jsx  PlaceOrder.jsx  Product.jsx
