[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
